# museum-collection

./: Cargo.toml  README.md  prompts.csv
src/: main.rs
src/config/: app.rs  database.rs  mod.rs  seed.rs
src/handlers/: artifact.rs  auth.rs  conservation.rs  exhibition.rs  home.rs  mod.rs  reservation.rs  restoration.rs
src/middleware/: auth.rs
src/models/: artifact.rs  conservation.rs  exhibition.rs  mod.rs  reservation.rs  restoration.rs  user.rs
src/services/: artifact_service.rs  conservation_service.rs  exhibition_service.rs  mod.rs  reservation_service.rs  restoration_service.rs  user_service.rs
static/css/: style.css
static/js/: main.js
templates/: base.html  index.html
templates/artifacts/: create.html  detail.html  edit.html  list.html
templates/auth/: login.html  register.html
templates/conservations/: create.html  detail.html  list.html
templates/dashboard/: overview.html
templates/exhibitions/: create.html  detail.html  list.html
templates/partials/: footer.html  header.html
templates/reservations/: create.html  list.html
templates/restorations/: create.html  detail.html  list.html
